# fgac

./: .gitignore  CMakeLists.txt  README.md  tex_test_4_4.astc
include/shader/: astc_table.hlsl  common.hlsl  compressTex.hlsl  ise.hlsl  weight_ise.hlsl
source/: example.c  fgac.cpp  log.cpp  log.h  utils.h
source/backend/cuda/: cuda_cpu_test.cpp  fgac_averages_and_directions.cuh  fgac_block_size.cpp  fgac_color_quantize.cuh  fgac_color_unquantize.cuh  fgac_compress_symbolic.cuh  fgac_compress_tex.cu  fgac_compress_texture.cu  fgac_compress_texture.cuh  fgac_compress_texture.h  fgac_cuda.cpp  fgac_cuda.h  fgac_decompress_symbolic.cuh  fgac_ideal_endpoints_and_weights.cuh  fgac_image.cuh  fgac_integer_sequence.cuh  fgac_internal.cuh  fgac_internal.h  fgac_partition_tables.cpp  fgac_pick_best_endpoint_format.cuh  fgac_precomputed_table.cpp  fgac_precomputed_table.h  fgac_quantization.cpp  fgac_symbolic_physical.cuh  fgac_weight_align.cuh
source/backend/dx12/: fgac_dx12_api.cpp  fgac_dx12_api.h  renderdoc_app.h
source/backend/fgac_cuda/: cuda_backend.cpp  cuda_backend.h  fgac_device_host_common.h
source/backend/fgac_cuda/device/: fgac_averages_and_directions.cuh  fgac_color_quantize.cuh  fgac_compress_symbolic.cuh  fgac_decompress_symbolic.cuh  fgac_decvice_common.cuh  fgac_ideal_endpoints_and_weights.cuh  fgac_integer_sequence.cuh  fgac_pick_best_endpoint_format.cuh  fgac_quantization.cuh  fgac_symbolic_physical.cuh  fgac_weight_quant_xfer_tables.cuh
source/backend/fgac_cuda/host/: fgac_device_size.cpp  fgac_host_common.h
